--- a/src/assets/gobal.scss
+++ b/src/assets/gobal.scss
@@ -9,6 +9,12 @@ input, textarea, body, button, a, p{
 }
 *{
   box-sizing: border-box;
+  -webkit-touch-callout:none;
+  -webkit-user-select:none;
+  -khtml-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
 }
 .clearFix:after{
   visibility: hidden;
